@@ -1,3 +1,7 @@
+Fri Aug 25 16:58:39 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Moved stuff around for the new indexing stuff.
+
 Fri Aug 25 12:08:00 BST 2000 Olly Betts
 
 	* Minor tweaks to apitest and matcher.
